[package]
name = "grpcurl-proxy"
version = "0.1.0"
authors = ["nrskt <norisuke_takafuji@caddi.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
tokio = {version="1.4.0", features = ["full"]}
serde_json = "1.0.64"
warp = "0.3.1"
nom = "6.1.2"
http = "0.2.3"
